--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./index.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <title>Wordle</title>
 </head>
@@ -14,15 +15,14 @@
   <h1>Wordle</h1>
   <hr>
   <div class="container">
-    <input type="text" id="word" placeholder="Enter a word">
+    <input type="text" id="word" placeholder="Ingresa una palabra">
     <div class="buttons">
-      <button class="btn" id="start">Subit</button>
-      <button class="btn" id="restartBtn">Restart Game</button>
+      <button class="btn" id="restartBtn">Reiniciar Juego</button>
     </div>
   </div>
 
   <div class="intentos">
-    <p id="tries">Tries: 0</p>
+    <p id="tries">Intentos: 0</p>
   </div>
 
   <div class="Wordle-Game" id="output">
