Refactored ALL the code

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
   <h1>Wordle</h1>
   <hr>
   <div class="container">
-    <input type="text" id="word" placeholder="Ingresa una palabra">
+    <input type="text" id="word" placeholder="Enter a word" autocomplete="off">
     <div class="buttons">
-      <button class="btn" id="restartBtn">Reiniciar Juego</button>
+      <button class="btn" id="restartBtn">Restart game</button>
     </div>
   </div>
 
   <div class="intentos">
-    <p id="tries">Intentos: 0</p>
+    <p id="tries"></p>
   </div>
 
   <div class="Wordle-Game" id="output">
